@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        kotlinVersion = '1.3.20'
-        springBootVersion = '2.1.1.RELEASE'
+        kotlinVersion = '1.3.72'
+        springBootVersion = '2.3.0.RELEASE'
     }
     repositories {
         jcenter()
@@ -13,13 +13,12 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
-        classpath("com.bmuschko:gradle-docker-plugin:4.1.0")
     }
 }
 
 plugins {
-//    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC12"
-    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'org.springframework.boot' version '2.3.0.RELEASE'
 }
 
 subprojects {
@@ -31,27 +30,15 @@ subprojects {
     }
     group = 'bingege'
     version = '0.0.1'
-    kotlinVersion = '1.3.20'
+    kotlinVersion = '1.3.72'
 
     apply plugin: 'kotlin'
     apply plugin: 'kotlin-kapt'
     apply plugin: "kotlin-jpa"
     apply plugin: 'kotlin-spring'
     apply plugin: 'idea'
+    apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
-//    apply plugin: 'com.bmuschko.docker-remote-api'
-//    apply plugin: 'io.gitlab.arturbosch.detekt'
-
-//    detekt {
-//        input = files("$projectDir/src/main/kotlin")
-//        config = files("$rootDir/detekt.yml")
-//        filters = '.*/test/.*,.*/resources/.*,.*/tmp/.*,.*/build/.*,.*/debug/.*'
-//        reports {
-//            xml.enabled = true
-//            html.enabled = true
-//        }
-//        parallel = true
-//    }
 
     compileKotlin {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -72,10 +59,6 @@ subprojects {
 
     test {
         useJUnitPlatform()
-//        jvmArgs '--enable-preview'
-//        testLogging.showStandardStreams = true
-//        outputs.upToDateWhen { false }
-//        systemProperty 'spring.profiles.active', 'test,local-test'
     }
 
     dependencies {
@@ -85,10 +68,6 @@ subprojects {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion")
         implementation("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
         implementation("org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion")
-
-        // 代码校验
-//        detektPlugins("io.gitlab.arturbosch.detekt:detekt-formatting:1.0.0-RC12")
-
 
         // swagger文档
         implementation("io.springfox:springfox-swagger2:2.9.2") {
@@ -117,11 +96,12 @@ subprojects {
         testImplementation("org.springframework.security:spring-security-test:5.1.5.RELEASE")
     }
 
-    dependencyManagement {
-        imports {
-            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") {
-                bomProperty("kotlin.version", "1.3.20")
-            }
-        }
-    }
+//
+//    dependencyManagement {
+//        imports {
+//            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") {
+//                bomProperty("kotlin.version", "1.3.20")
+//            }
+//        }
+//    }
 }
